Prevent hiding part of scrollbar in sidebar under tabs

--- a/src/scss/_c.sidebar.scss
+++ b/src/scss/_c.sidebar.scss
@@ -97,7 +97,12 @@
 
 	&__tab-content {
 		height: 100%;
-		padding: (20px + $sidebar-tab-height) 20px 20px;
+		padding-top: $sidebar-tab-height;
+	}
+
+	&__tab-content-inner {
+		height: 100%;
+		padding: 20px;
 		overflow-y: auto;
 	}
 }
